syntax = "proto3";
package contracts;

option csharp_namespace = "Microsoft.LocalForwarder.Library.Inputs.Contracts";
option java_package = "com.microsoft.localforwarder.library.inputs.contracts";
option java_multiple_files = true;

import "google/protobuf/duration.proto";
import "Event.proto";

message PageView {
	Event event = 1;

	string url = 2;
    
	google.protobuf.Duration duration = 3;
    
	string id = 4;
    
	string referrerUri = 5;
}